--- a/mainWindow.html
+++ b/mainWindow.html
@@ -4,7 +4,6 @@
 <head>
   <link rel="stylesheet" href="mainWindow.css">
 </head>
-
 <body>
 
   <div id="title-bar">
@@ -19,11 +18,19 @@
       <button id="close">x</button>
     </div>
 
-    <div id="title">PlaceHolder</div>
+    <div id="title">No File Open</div>
     
   </div>
+  <!-- Draggable DIV -->
+<div id="toolbar">
+  <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+  <div id="toolbar-draggable">Click here to move</div>
+  <p>Move</p>
+  <p>this</p>
+  <p>DIV</p>
+</div>
   <div id="content">
-    <canvas id="canvas" width=500 height=500><canvas>
+    <canvas id="canvas" width=2000 height=2000><canvas>
   </div>
   <script src="mainWindowScript.js"></script>
 </body>
