--- a/mainWindow.html
+++ b/mainWindow.html
@@ -54,9 +54,9 @@
         <div class="dropdown">
           <button id="run" class="menu-button">Run</button>
           <div class="dropdown-content" id="run-dropdown">
-            <button class="dropdown-button"><span class="dropdown-button-text">New</span><span class="dropdown-button-shortcut">Ctrl+N</span></button>
+            <button id="run-Run" class="dropdown-button"><span class="dropdown-button-text">Run</span><span class="dropdown-button-shortcut">Ctrl+Enter</span></button>
             <hr>
-            <button class="dropdown-button"><span class="dropdown-button-text">New</span><span class="dropdown-button-shortcut">Ctrl+N</span></button>
+            <button id="run-RunWithJava" class="dropdown-button"><span class="dropdown-button-text">Run With Java</span><span class="dropdown-button-shortcut">Ctrl+N</span></button>
             <hr>
             <button class="dropdown-button"><span class="dropdown-button-text">New</span><span class="dropdown-button-shortcut">Ctrl+N</span></button>
           </div>
