Can now run java code

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -83,7 +83,10 @@
     <div class="vl"></div>
     <div class='text-container' id='text-container'></div>
     <div id="cursor-follower"></div>
-
+  </div>
+  <div id="terminal">
+    <div id="terminal-resizer"></div>
+    <button id="exit-terminal">X</button>
   </div>
   
   <script src="mainWindowScript.js"></script>
