fixed a single bug

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -81,14 +81,14 @@
   <div class="content" id="content">
     <div class='lineNums' id = 'lineNums'></div>
     <div class="vl"></div>
-    <pre class='text-container' id='text-container'>
-      <code class="code" id="tab1-code"></code>
-    </pre>
+    <pre class='text-container' id='text-container'></pre>
     <div id="cursor-follower"></div>
   </div>
   <div id="terminal">
     <div id="terminal-resizer"></div>
     <button id="exit-terminal">X</button>
+    <span id="terminal-text"></span>
+
   </div>
   
   <script src="mainWindowScript.js"></script>
