Better caret tracking

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -91,6 +91,8 @@
 
   </div>
   <script charset="UTF-8" src="assets/highlight.pack.js"></script>
+  <link rel="stylesheet" href="highlight.css">
+  <script src="SyntaxHighlighter.js"></script>
   <script src="mainWindowScript.js"></script>
   <link rel="stylesheet" href="assets\styles\sunburst.css">
 </body>
