Terminal now supports input

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -88,6 +88,7 @@
     <div id="terminal-resizer"></div>
     <button id="exit-terminal">X</button>
     <span id="terminal-text"></span>
+    <span id="terminal-input" contenteditable=true></span>
 
   </div>
   <link rel="stylesheet" href="highlight.css">
