--- a/mainWindow.html
+++ b/mainWindow.html
@@ -87,10 +87,11 @@
   <div id="terminal">
     <div id="terminal-resizer"></div>
     <button id="exit-terminal">X</button>
-    <span id="terminal-text"></span>
+    <span id="terminal-output"></span>
     <span id="terminal-input" contenteditable=true></span>
 
   </div>
+  <div id="test" style="font-size:10px">h</div>
   <link rel="stylesheet" href="highlight.css">
   <script src="SyntaxHighlighter.js"></script>
   <script src="mainWindowScript.js"></script>
