Begining of tab implementation

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -78,6 +78,7 @@
       </div>
     </div>
   </div>
+  <div class="tab" id='tab1'></div>
   <div class="content" id="content">
     <div class='lineNums' id = 'lineNums'></div>
     <div class="vl"></div>
@@ -91,7 +92,6 @@
     <span id="terminal-input" contenteditable=true></span>
 
   </div>
-  <div id="test" style="font-size:10px">h</div>
   <link rel="stylesheet" href="highlight.css">
   <script src="SyntaxHighlighter.js"></script>
   <script src="mainWindowScript.js"></script>
